--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Hello word</title>
 </head>
 <body style="background-color: #1abc9c">
-	<h1 style="padding-top: 20%; padding-bottom: 20%; text-align: center;">
+	<h1 style="padding-top: 20%; padding-bottom: 20%; text-align: center; color: #FFF">
 		Location de voitures anciennes.
 	</h1>
 </body>
