motification de la couleur de fond

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Hello word</title>
 </head>
-<body style="background-color: #1abc9c">
+<body style="background-color: #813374">
 	<h1 style="padding-top: 20%; padding-bottom: 20%; text-align: center; color: #FFF">
 		Location de voitures anciennes.
 	</h1>
